fix(geckolib): unbreak 2024.4 MCP create and dual-path assets
Create animated elements when the requested type is creatable instead of
requiring every type. Import/list/validate geo and animations for both
MCreator models/ and runtime assets/<modid> paths.